// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-typography renders component 1`] = `
<wpp-typography class="wpp-typography" exportparts="typography, inner" type="m-body" style="--typography-color: var(--wpp-text-color);">
  <mock:shadow-root>
    <span class="typography" exportparts="typography" part="typography">
      <slot part="inner"></slot>
    </span>
  </mock:shadow-root>
</wpp-typography>
`;

exports[`wpp-typography renders component with tag h1 and "l-heading" type  1`] = `
<wpp-typography class="wpp-typography" exportparts="typography, inner" tag="h1" type="l-heading" style="--typography-color: var(--wpp-text-color);">
  <mock:shadow-root>
    <h1 class="typography" exportparts="typography" part="typography">
      <slot part="inner"></slot>
    </h1>
  </mock:shadow-root>
  Preview Heading
</wpp-typography>
`;
